jumbo nel main fatto

--- a/src/assets/scss/partials/_common.scss
+++ b/src/assets/scss/partials/_common.scss
@@ -1,3 +1,4 @@
+// header
 .my-light-gray-bg{
     background-color: #F8F9FC;
 }
@@ -8,4 +9,17 @@
 
 #active-link-header{
     color: #2F55D4;
+}
+
+// main
+.my-blue-text{
+    color: #2F55D4;
+}
+
+.my-alice-blue-bg{
+    background-color: #2F55D41A;
+}
+
+.my-blue-bg{
+    background-color: #2F55D4;
 }
