sezione quickstart fatta

--- a/src/assets/scss/partials/_common.scss
+++ b/src/assets/scss/partials/_common.scss
@@ -11,6 +11,8 @@
     color: #2F55D4;
 }
 
+
+
 // main
 .my-blue-text{
     color: #2F55D4;
@@ -22,4 +24,20 @@
 
 .my-blue-bg{
     background-color: #2F55D4;
+}
+
+.my-dark-gray{
+    background-color: #4F5A69;
+}
+
+.fa-check{
+    border-radius: 50%;
+    font-size: .5rem;
+    padding: .2rem;
+    border: 2px solid;
+}
+
+.my-fa-check-green{
+    border-color: #2ECA8B;
+    color: #2ECA8B;
 }
